# kernelTestBench

./: .gitignore  CMakeLists.txt  README.md  detectCudaArch.cu  main.cpp  run.sh
Includes/: kernels.h  routines.h  tests.h  util.h
Routines/: common.cuh  goodFeatures.cu  goodFeatures.cuh  laserExtractor.cu  laserExtractor.cuh  minMax.cu  minMax.cuh
Tests/: common.h  testMinMax.h  testShiTomasi.h
Utils/: common.h  cpu_functions.h  device.cu  device.cuh
kernels/: gfft.cu  gfft.cuh  reduction.cu  reduction.cuh  ringDetector.cu  ringDetector.cuh  util.cu  util.cuh
kernels/cameraModule/: equidistant.cuh  pinhole.cu  pinhole.cuh
